# l4-docker-bare

./: .gitignore  Dockerfile  README.md  download_model.py  pyproject.toml
infra/: main.tf
src/4_docker_example/: __init__.py
